# malbook

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  dev-requirements.txt  release.sh  requirements.txt  setup.cfg  test.sh  upload.sh
Presentation/: Automated Malware Analysis.key
Report/: Report.pages
WindowsPE/: .gitignore  .ignore  README.md  guest.py  notebook.ipynb  pe_sample.py  vbox.py  windows.py
WindowsPE/guest/: guest.py  start.bat
malbook/: .gitignore  README.md
malbook/src/malbook/: __init__.py
scripts/: malbook_release.sh  malbook_test.sh  release.sh  requirement_install.sh  test.sh
src/malbook/: __init__.py  __main__.py  common.py  environment.py  errors.py  framework.py
