[metadata]
name = malbook
version = 0.0.1
author = Rida Dzhaafar
author_email = rdzhaafar@gmail.com
description = Automated malware analysis using Jupyter notebooks
long_description = file: README.md
url = https://github.com/rdzhaafar/malbook
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires = 
    jupyter >= 1.0.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    malbook = malbook.__main__:_main