[bumpversion]
current_version = 0.0.2
commit = True
tag = True

[bumpversion:file:src/malbook/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
name = malbook
version = 0.0.1
author = Rida Dzhaafar
author_email = rdzhaafar@gmail.com
description = Jupyter notebooks framework for automated malware analysis
long_description = file: README.md
url = https://github.com/rdzhaafar/malbook
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.9
install_requires = 
	jupyter >= 1.0.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
	malbook = malbook.__main__:_main
