[metadata]
name = malbook
version = 1.0.0
author = Rida Dzhaafar
author_email = rdzhaafar@gmail.com
description = Jupyter notebooks framework for automated malware analysis
long_description = https://github.com/rdzhaafar/malbook
url = https://github.com/rdzhaafar/malbook
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.9
install_requires = 
	jupyter >= 1.0.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
	malbook = malbook.__main__:_main
